# dyad

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  biome.json  dyad.sh  example.py  main.py  mkdocs.yml  package.json  playwright.config.ts  pyproject.toml  pyrightconfig.json  rsbuild.config.ts  tach.toml  tsconfig.json  viewer.py  viewer.sh  viewer_dev.py  vite.config.js
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
docs/: cli.md  index.md
docs/extensions/: api.md  build-a-tool.md  build-an-agent.md  faq.md  index.md
docs/features/: agents.md  code-editing.md  code-references.md  index.md  indexing.md  models.md  workspace.md
docs/getting-started/: index.md  quickstart.md
docs/internal/: development.md  packaging.md  publishing.md  sandpack.md
docs/stylesheets/: extra.css
e2e/: README.md
e2e/fakes/: fake_llm_server.py
e2e/tests/: analytics.spec.ts  anthropic.spec.ts  apply_code.spec.ts  cancel_chat.spec.ts  chat_autocomplete.spec.ts  chat_dir.spec.ts  chat_error.spec.ts  chat_input_enter.spec.ts  code_output.spec.ts  configure_pad.spec.ts  create_pad.spec.ts  delete_chat.spec.ts  delete_pad.spec.ts  edit_chat.spec.ts  generate_pad.spec.ts  markdown_stream.spec.ts  models.spec.ts  (+9 more)
examples/: code_translator_tool.py  haiku_agent.py  weather_tool.py
pads/: mesop-style.md  ts.md
scripts/: build_pip.sh  bump_version.py  dev.sh  dev_local_api.sh  docker_smoketest.sh  download_icons.py  pip.sh  pre_commit_hook_all.sh  py_test.sh  py_typecheck.sh  release_pip.sh  rename.sh  run_test_server.sh  run_with_extensions.sh  test.sh  viewer_dev.sh
(+157 files in other folders)
