[project]
name = "dyad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dyad-core==0.1.0",
    "click>=8.1.7",
    "pydantic>=2.9.2",
    "werkzeug>=3.1.2",
    "flask-sock>=0.7.0",
    "dyad-git==0.1.0",
    "mesop==1.0.0rc1",
]

[project.scripts]
dyad_app = "dyad_app.cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dyad_app"]
artifacts = ["src/dyad_app/static/build/*"]

[tool.uv]
dev-dependencies = [
    "mkdocs-material>=9.5.42",
    "pyinstrument>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "pytest-clarity>=1.0.1",
    "gunicorn>=23.0.0",
]

[tool.uv.workspace]
members = ["packages/*", "examples/agents/bible-scholar"]


[tool.uv.sources]
dyad-core = { workspace = true }
dyad-llms = { workspace = true }
dyad-git = { workspace = true }

[tool.ruff]
extend-exclude = [
    "packages/dyad_core/tests/goldens/*",
    "packages/dyad_core/tests/fixtures/*",
]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Ruff
    "RUF",
]
ignore = [
    "E501",   # ignore line-length (e.g. long docstring)
    "SIM117", # ignore combine with statements (it leads to harder to read code)
    "SIM102", # ignore combine if statements (it leads to harder to read code)
]
line-length = 80
indent-width = 4
